--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="flex flex-4">
                 <div class="box person">
                     <div class="image round">
-                        <img src="images/pic03.jpg" alt="Person 1" />
+                        <img src="images/picger.jpg alt=" Person 1 " />
                     </div>
                     <h3>Jorge Oliva</h3>
                     <p>Desarrollo</p>
@@ -88,35 +88,35 @@
     </section>
 
     <!-- Three -->
-    <section id="three" class="wrapper special">
-        <div class="inner">
-            <header class="align-center">
+    <section id="three " class="wrapper special ">
+        <div class="inner ">
+            <header class="align-center ">
                 <h2>Nunc Dignissim</h2>
                 <p>Aliquam erat volutpat nam dui </p>
             </header>
-            <div class="flex flex-2">
+            <div class="flex flex-2 ">
                 <article>
-                    <div class="image fit">
-                        <img src="images/pic01.jpg" alt="Pic 01" />
+                    <div class="image fit ">
+                        <img src="images/pic01.jpg " alt="Pic 01 " />
                     </div>
                     <header>
                         <h3>Praesent placerat magna</h3>
                     </header>
                     <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
                     <footer>
-                        <a href="#" class="button special">More</a>
+                        <a href="# " class="button special ">More</a>
                     </footer>
                 </article>
                 <article>
-                    <div class="image fit">
-                        <img src="images/pic02.jpg" alt="Pic 02" />
+                    <div class="image fit ">
+                        <img src="images/pic02.jpg " alt="Pic 02 " />
                     </div>
                     <header>
                         <h3>Fusce pellentesque tempus</h3>
                     </header>
                     <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
                     <footer>
-                        <a href="#" class="button special">More</a>
+                        <a href="# " class="button special ">More</a>
                     </footer>
                 </article>
             </div>
@@ -124,28 +124,28 @@
     </section>
 
     <!-- Footer -->
-    <footer id="footer">
-        <div class="inner">
-            <div class="flex">
-                <div class="copyright">
-                    &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+    <footer id="footer ">
+        <div class="inner ">
+            <div class="flex ">
+                <div class="copyright ">
+                    &copy; Untitled. Design: <a href="https://templated.co ">TEMPLATED</a>. Images: <a href="https://unsplash.com ">Unsplash</a>.
                 </div>
-                <ul class="icons">
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-                    <li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-                    <li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+                <ul class="icons ">
+                    <li><a href="# " class="icon fa-facebook "><span class="label ">Facebook</span></a></li>
+                    <li><a href="# " class="icon fa-twitter "><span class="label ">Twitter</span></a></li>
+                    <li><a href="# " class="icon fa-linkedin "><span class="label ">linkedIn</span></a></li>
+                    <li><a href="# " class="icon fa-pinterest-p "><span class="label ">Pinterest</span></a></li>
+                    <li><a href="# " class="icon fa-vimeo "><span class="label ">Vimeo</span></a></li>
                 </ul>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.min.js "></script>
+    <script src="assets/js/skel.min.js "></script>
+    <script src="assets/js/util.js "></script>
+    <script src="assets/js/main.js "></script>
 
 </body>
 
