--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="flex flex-4">
                 <div class="box person">
                     <div class="image round">
-                        <img src="images/picger.jpg alt=" Person 1 " />
+                        <img src="images/pic033.png" Person 1 " />
                     </div>
-                    <h3>Jorge Oliva</h3>
+                    <h3>Gerson Velasquez</h3>
                     <p>Desarrollo</p>
                 </div>
             </div>
