--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <section id="three " class="wrapper special ">
         <div class="inner ">
             <header class="align-center ">
-                <h2>Nunc Dignissim</h2>
-                <p>Aliquam erat volutpat nam dui </p>
+                <h2>Proyectos Realizados</h2>
+                <p>Desarollo, diseño y consultoria </p>
             </header>
             <div class="flex flex-2 ">
                 <article>
