--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav id="nav">
                 <a href="index.html">Principal</a>
                 <a href="generic.html">acc</a>
-                <a href="elements.html">Elements</a>
+                <a href="elements.html">Elementos</a>
             </nav>
             <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
@@ -40,20 +40,20 @@
             <div class="flex flex-3">
                 <article>
                     <header>
-                        <h3>Magna tempus sed amet<br /> aliquam veroeros</h3>
+                        <h3>Diseño de Software<br /> app android y IOS</h3>
                     </header>
-                    <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+                    <p>Desarrollo de app para distinguidas marcas a nivel nacional e internacional para Andorid, IOS y sistemas operativos</p>
                     <footer>
-                        <a href="#" class="button special">More</a>
+                        <a href="#" class="button special">Mas Informacion</a>
                     </footer>
                 </article>
                 <article>
                     <header>
-                        <h3>Interdum lorem pulvinar<br /> adipiscing vitae</h3>
+                        <h3>Desarrollo<br /> Bussiness Intelligent</h3>
                     </header>
-                    <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+                    <p> Analisis para el desarrollo de proyectos de Bussiness Intelligent y Consultor CRM para analisis de datos</p>
                     <footer>
-                        <a href="#" class="button special">More</a>
+                        <a href="#" class="button special">Mas Informacion</a>
                     </footer>
                 </article>
                 <article>
