--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 </article>
                 <article>
                     <header>
-                        <h3>Libero purus magna sapien<br /> sed ullamcorper</h3>
+                        <h3>Soporte Tecnico<br /> Cableado estructurado</h3>
                     </header>
-                    <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+                    <p>Proyectos de implementacion de Data Center, cableado y estructurado, mantenimiento preventivo y correctivo.</p>
                     <footer>
-                        <a href="#" class="button special">More</a>
+                        <a href="#" class="button special">Mas Informacion</a>
                     </footer>
                 </article>
             </div>
@@ -81,7 +81,7 @@
                         <img src="images/pic033.png" Person 1 " />
                     </div>
                     <h3>Gerson Velasquez</h3>
-                    <p>Desarrollo</p>
+                    <p>Desarrollador</p>
                 </div>
             </div>
         </div>
@@ -100,11 +100,11 @@
                         <img src="images/pic01.jpg " alt="Pic 01 " />
                     </div>
                     <header>
-                        <h3>Praesent placerat magna</h3>
+                        <h3>Ultimas noticias Informaticas</h3>
                     </header>
-                    <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+                    <p>Kinal abre nuevos cursos para certificicaciones Cisco, microsoft y Linux.</p>
                     <footer>
-                        <a href="# " class="button special ">More</a>
+                        <a href="# " class="button special ">Mas Información</a>
                     </footer>
                 </article>
                 <article>
@@ -112,11 +112,11 @@
                         <img src="images/pic02.jpg " alt="Pic 02 " />
                     </div>
                     <header>
-                        <h3>Fusce pellentesque tempus</h3>
+                        <h3>Bolsa de Empleos</h3>
                     </header>
-                    <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
+                    <p>Aplica aca algunas ofertas laborales en el Mercado</p>
                     <footer>
-                        <a href="# " class="button special ">More</a>
+                        <a href="# " class="button special ">Mas Información</a>
                     </footer>
                 </article>
             </div>
